--- a/src/main/webapp/menu.html
+++ b/src/main/webapp/menu.html
@@ -96,9 +96,41 @@
                                     <a class="btn btn-primary btn-lg" href="TerminadoC?action=delete" role="button">D</a>
                                 </p>
                             </div>
-
                         </div>
 
+                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+                            <div class="tm-icon-text-box col-md-4">
+                                <h3 align="center" class="tm-icon-text-box-title">Asignar Trabajo</h3>
+                                <p align="center">
+                                    <a class="btn btn-primary btn-lg" href="AsignarTrabajo?action=create" role="button">Asignar</a>
+                                </p>
+                            </div>
+                            <div class="tm-icon-text-box col-md-4">
+                                <h3 align="center" class="tm-icon-text-box-title">Trabajo a Realizar</h3>
+                                <p align="center">
+                                    <a class="btn btn-primary btn-lg" href="TrabajoARealizarC?action=create" role="button">C</a>
+                                    <a class="btn btn-primary btn-lg" href="TrabajoARealizarC?action=update" role="button">U</a>
+                                    <a class="btn btn-primary btn-lg" href="TrabajoARealizarC?action=delete" role="button">D</a>
+                                </p>
+                            </div><div class="tm-icon-text-box col-md-4">
+                                <h3 align="center" class="tm-icon-text-box-title">Horario</h3>
+                                <p align="center">
+                                    <a class="btn btn-primary btn-lg" href="HorarioC?action=create" role="button">C</a>
+                                    <a class="btn btn-primary btn-lg" href="HorarioC?action=update" role="button">U</a>
+                                    <a class="btn btn-primary btn-lg" href="HorarioC?action=delete" role="button">D</a>
+                                </p>
+                            </div>
+                            <div class="tm-icon-text-box col-md-4">
+                                <h3 align="center" class="tm-icon-text-box-title">Terminado</h3>
+                                <p align="center">
+                                    <a class="btn btn-primary btn-lg" href="TerminadoC?action=create" role="button">C</a>
+                                    <a class="btn btn-primary btn-lg" href="TerminadoC?action=update" role="button">U</a>
+                                    <a class="btn btn-primary btn-lg" href="TerminadoC?action=delete" role="button">D</a>
+                                </p>
+                            </div>
+
+                        </div>
+                        
                     </div>
                 </div>
 
