--- a/src/main/webapp/menu.html
+++ b/src/main/webapp/menu.html
@@ -102,7 +102,7 @@
                             <div class="tm-icon-text-box col-md-4">
                                 <h3 align="center" class="tm-icon-text-box-title">Asignar Trabajo</h3>
                                 <p align="center">
-                                    <a class="btn btn-primary btn-lg" href="AsignarTrabajo?action=create" role="button">Asignar</a>
+                                    <a class="btn btn-primary btn-lg" href="AsignarTrabajo" role="button">Asignar</a>
                                 </p>
                             </div>
                             <div class="tm-icon-text-box col-md-4">
