--- a/src/main/webapp/menu.html
+++ b/src/main/webapp/menu.html
@@ -24,121 +24,26 @@
         <div class="row tm-section tm-blue-bg-row">
             <section>
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 text-xs-center">
-                    <h2 class="tm-section-title">Menú</h2>   
+                    <h2 class="tm-section-title">Menú ORO LEGAL</h2>   
                     <br><br>
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
                     <div class="tm-icon-text-boxes-container">
                         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
                             <div class="tm-icon-text-box col-md-4">
-                                <h3 align="center" class="tm-icon-text-box-title">Usuario</h3>
+                                <h3 align="center" class="tm-icon-text-box-title">REPORTE</h3>
                                 <p align="center">
-                                    <a class="btn btn-primary btn-lg" href="Usuario?action=create" role="button">C</a>
-                                    <a class="btn btn-primary btn-lg" href="Usuario?action=update" role="button">U</a>
-                                    <a class="btn btn-primary btn-lg" href="Usuario?action=delete" role="button">D</a>
-                                </p>
-                            </div>
-                            <div class="tm-icon-text-box col-md-4">
-                                <h3 align="center" class="tm-icon-text-box-title">Empresa</h3>
-                                <p align="center">
-                                    <a class="btn btn-primary btn-lg" href="EmpresaC.jsp" role="button">C</a>
-                                    <a class="btn btn-primary btn-lg" href="EmpresaC?action=update" role="button">U</a>
-                                    <a class="btn btn-primary btn-lg" href="EmpresaC?action=delete" role="button">D</a>
-                                </p>
-                            </div>
-                            <div class="tm-icon-text-box col-md-4" >
-                                <h3 align="center" class="tm-icon-text-box-title">Mensaje</h3>
-                                <p align="center">
-                                    <a class="btn btn-primary btn-lg" href="MensajeC?action=create" role="button">C</a>
-                                    <a class="btn btn-primary btn-lg" href="MensajeC?action=update" role="button">U</a>
-                                    <a class="btn btn-primary btn-lg" href="MensajeC?action=delete" role="button">D</a>
-                                </p>
-                            </div>
-                            <div class="tm-icon-text-box col-md-4" >
-                                <h3 align="center" class="tm-icon-text-box-title">Servicio</h3>
-                                <p align="center">
-                                    <a class="btn btn-primary btn-lg" href="ServicioC?action=create" role="button">C</a>
-                                    <a class="btn btn-primary btn-lg" href="ServicioC?action=update" role="button">U</a>
-                                    <a class="btn btn-primary btn-lg" href="ServicioC?action=delete" role="button">D</a>
+                                    <a class="btn btn-primary btn-lg" href="Usuario?action=create" role="button">Generar</a>
                                 </p>
                             </div>
                         </div>
-                        <br>
-                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
-                            <div class="tm-icon-text-box col-md-4">
-                                <h3 align="center" class="tm-icon-text-box-title">Funciones</h3>
-                                <p align="center">
-                                    <a class="btn btn-primary btn-lg" href="FuncionesC?action=create" role="button">C</a>
-                                    <a class="btn btn-primary btn-lg" href="FuncionesC?action=update" role="button">U</a>
-                                    <a class="btn btn-primary btn-lg" href="FuncionesC?action=delete" role="button">D</a>
-                                </p>
-                            </div>
-                            <div class="tm-icon-text-box col-md-4">
-                                <h3 align="center" class="tm-icon-text-box-title">Trabajo a Realizar</h3>
-                                <p align="center">
-                                    <a class="btn btn-primary btn-lg" href="TrabajoARealizarC?action=create" role="button">C</a>
-                                    <a class="btn btn-primary btn-lg" href="TrabajoARealizarC?action=update" role="button">U</a>
-                                    <a class="btn btn-primary btn-lg" href="TrabajoARealizarC?action=delete" role="button">D</a>
-                                </p>
-                            </div><div class="tm-icon-text-box col-md-4">
-                                <h3 align="center" class="tm-icon-text-box-title">Horario</h3>
-                                <p align="center">
-                                    <a class="btn btn-primary btn-lg" href="HorarioC?action=create" role="button">C</a>
-                                    <a class="btn btn-primary btn-lg" href="HorarioC?action=update" role="button">U</a>
-                                    <a class="btn btn-primary btn-lg" href="HorarioC?action=delete" role="button">D</a>
-                                </p>
-                            </div>
-                            <div class="tm-icon-text-box col-md-4">
-                                <h3 align="center" class="tm-icon-text-box-title">Terminado</h3>
-                                <p align="center">
-                                    <a class="btn btn-primary btn-lg" href="TerminadoC?action=create" role="button">C</a>
-                                    <a class="btn btn-primary btn-lg" href="TerminadoC?action=update" role="button">U</a>
-                                    <a class="btn btn-primary btn-lg" href="TerminadoC?action=delete" role="button">D</a>
-                                </p>
-                            </div>
-                        </div>
-
-                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
-                            <div class="tm-icon-text-box col-md-4">
-                                <h3 align="center" class="tm-icon-text-box-title">Asignar Trabajo</h3>
-                                <p align="center">
-                                    <a class="btn btn-primary btn-lg" href="AsignarTrabajo.jsp" role="button">Asignar</a>
-                                </p>
-                            </div>
-                            <div class="tm-icon-text-box col-md-4">
-                                <h3 align="center" class="tm-icon-text-box-title">Trabajo a Realizar</h3>
-                                <p align="center">
-                                    <a class="btn btn-primary btn-lg" href="TrabajoARealizarC?action=create" role="button">C</a>
-                                    <a class="btn btn-primary btn-lg" href="TrabajoARealizarC?action=update" role="button">U</a>
-                                    <a class="btn btn-primary btn-lg" href="TrabajoARealizarC?action=delete" role="button">D</a>
-                                </p>
-                            </div><div class="tm-icon-text-box col-md-4">
-                                <h3 align="center" class="tm-icon-text-box-title">Horario</h3>
-                                <p align="center">
-                                    <a class="btn btn-primary btn-lg" href="HorarioC?action=create" role="button">C</a>
-                                    <a class="btn btn-primary btn-lg" href="HorarioC?action=update" role="button">U</a>
-                                    <a class="btn btn-primary btn-lg" href="HorarioC?action=delete" role="button">D</a>
-                                </p>
-                            </div>
-                            <div class="tm-icon-text-box col-md-4">
-                                <h3 align="center" class="tm-icon-text-box-title">Terminado</h3>
-                                <p align="center">
-                                    <a class="btn btn-primary btn-lg" href="TerminadoC?action=create" role="button">C</a>
-                                    <a class="btn btn-primary btn-lg" href="TerminadoC?action=update" role="button">U</a>
-                                    <a class="btn btn-primary btn-lg" href="TerminadoC?action=delete" role="button">D</a>
-                                </p>
-                            </div>
-
-                        </div>
-                        
                     </div>
-                </div>
 
             </section>
 
             <div class="row">
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
-                    <p class="text-xs-center tm-copyright-text">Sara Chamseddine, Brenda Méndez, Óscar Romero © (2017)</p>
+                    <p class="text-xs-center tm-copyright-text">Sara Chamseddine © (2017)</p>
                 </div>
             </div>
 
